--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Wordle</title>
     <link rel="stylesheet" href="./style.css">
     <script type="module" defer src="./data.js"></script>
     <script type="module" defer src="./app.js"></script>
@@ -12,7 +12,7 @@
 <body>
     <h1>Wordle</h1>
     <h2>The Word Guessing Game</h2>
-    <h3 id="results">this is where results show</h3>
+    <h3 id="results">Take your first guess</h3>
 <section class="word-board">
     <div class="guess-sqr" id="0">0</div>
     <div class="guess-sqr" id="1">1</div>
