working keyboard with delete

--- a/index.html
+++ b/index.html
@@ -51,36 +51,37 @@
 </section>
 <section class="keyboard">
     <section class="key-line-1">
-    <div class="key-sqr" id="q">q</div>
-    <div class="key-sqr" id="w">w</div>
-    <div class="key-sqr" id="e">e</div>
-    <div class="key-sqr" id="r">r</div>
-    <div class="key-sqr" id="t">t</div>
-    <div class="key-sqr" id="y">y</div>
-    <div class="key-sqr" id="u">u</div>
-    <div class="key-sqr" id="i">i</div>
-    <div class="key-sqr" id="o">o</div>
-    <div class="key-sqr" id="p">p</div>
+    <div class="key-sqr" id="q">Q</div>
+    <div class="key-sqr" id="w">W</div>
+    <div class="key-sqr" id="e">E</div>
+    <div class="key-sqr" id="r">R</div>
+    <div class="key-sqr" id="t">T</div>
+    <div class="key-sqr" id="y">Y</div>
+    <div class="key-sqr" id="u">U</div>
+    <div class="key-sqr" id="i">I</div>
+    <div class="key-sqr" id="o">O</div>
+    <div class="key-sqr" id="p">P</div>
     </section>
     <section class="key-line-2">
-    <div class="key-sqr" id="a">a</div>
-    <div class="key-sqr" id="s">s</div>
-    <div class="key-sqr" id="d">d</div>
-    <div class="key-sqr" id="f">f</div>
-    <div class="key-sqr" id="g">g</div>
-    <div class="key-sqr" id="h">h</div>
-    <div class="key-sqr" id="j">j</div>
-    <div class="key-sqr" id="k">k</div>
-    <div class="key-sqr" id="l">l</div>
+    <div class="key-sqr" id="a">A</div>
+    <div class="key-sqr" id="s">S</div>
+    <div class="key-sqr" id="d">D</div>
+    <div class="key-sqr" id="f">F</div>
+    <div class="key-sqr" id="g">G</div>
+    <div class="key-sqr" id="h">H</div>
+    <div class="key-sqr" id="j">J</div>
+    <div class="key-sqr" id="k">K</div>
+    <div class="key-sqr" id="l">L</div>
 </section>
     <section class="key-line-3">
-    <div class="key-sqr" id="z">z</div>
-    <div class="key-sqr" id="x">x</div>
-    <div class="key-sqr" id="c">c</div>
-    <div class="key-sqr" id="v">v</div>
-    <div class="key-sqr" id="b">b</div>
-    <div class="key-sqr" id="n">n</div>
-    <div class="key-sqr" id="m">m</div>
+    <div class="key-sqr" id="z">Z</div>
+    <div class="key-sqr" id="x">X</div>
+    <div class="key-sqr" id="c">C</div>
+    <div class="key-sqr" id="v">V</div>
+    <div class="key-sqr" id="b">B</div>
+    <div class="key-sqr" id="n">N</div>
+    <div class="key-sqr" id="m">M</div>
+    <div class="key-sqr" id="del">␡</div>
     </section>
 </section>
 <section class="reset-button">
