--- a/index.html
+++ b/index.html
@@ -14,43 +14,55 @@
     <h2>The Word Guessing Game</h2>
     <h3 id="results">Take your first guess</h3>
 <section class="word-board">
+    <section class="guess-word" id="Guess-1">
     <div class="guess-sqr" id="0"></div>
     <div class="guess-sqr" id="1"></div>
     <div class="guess-sqr" id="2"></div>
     <div class="guess-sqr" id="3"></div>
     <div class="guess-sqr" id="4"></div>
+</section>
+<section class="guess-word" id="Guess-2">
     <div class="guess-sqr" id="5"></div>
     <div class="guess-sqr" id="6"></div>
     <div class="guess-sqr" id="7"></div>
     <div class="guess-sqr" id="8"></div>
     <div class="guess-sqr" id="9"></div>
+</section>
+<section class="guess-word" id="Guess-3">
     <div class="guess-sqr" id="10"></div>
     <div class="guess-sqr" id="11"></div>
     <div class="guess-sqr" id="12"></div>
     <div class="guess-sqr" id="13"></div>
     <div class="guess-sqr" id="14"></div>
+</section>
+<section class="guess-word" id="Guess-4">
     <div class="guess-sqr" id="15"></div>
     <div class="guess-sqr" id="16"></div>
     <div class="guess-sqr" id="17"></div>
     <div class="guess-sqr" id="18"></div>
     <div class="guess-sqr" id="19"></div>
+</section>
+<section class="guess-word" id="Guess-5">
     <div class="guess-sqr" id="20"></div>
     <div class="guess-sqr" id="21"></div>
     <div class="guess-sqr" id="22"></div>
     <div class="guess-sqr" id="23"></div>
     <div class="guess-sqr" id="24"></div>
+</section>
+<section class="guess-word" id="Guess-6">
     <div class="guess-sqr" id="25"></div>
     <div class="guess-sqr" id="26"></div>
     <div class="guess-sqr" id="27"></div>
     <div class="guess-sqr" id="28"></div>
     <div class="guess-sqr" id="29"></div>
 </section>
+</section>
 <section class="guess-items">
     <input type="text" id ="players-guess">
  <button id="guess">Guess</button>
 </section>
 <section class="keyboard">
-    <section class="key-line-1">
+    <section class="key-line" id="key-line-1">
     <div class="key-sqr" id="q">Q</div>
     <div class="key-sqr" id="w">W</div>
     <div class="key-sqr" id="e">E</div>
@@ -62,7 +74,7 @@
     <div class="key-sqr" id="o">O</div>
     <div class="key-sqr" id="p">P</div>
     </section>
-    <section class="key-line-2">
+    <section class="key-line" id="key-line-2">
     <div class="key-sqr" id="a">A</div>
     <div class="key-sqr" id="s">S</div>
     <div class="key-sqr" id="d">D</div>
@@ -73,7 +85,7 @@
     <div class="key-sqr" id="k">K</div>
     <div class="key-sqr" id="l">L</div>
 </section>
-    <section class="key-line-3">
+    <section class="key-line" id="key-line-3">
     <div class="key-sqr" id="z">Z</div>
     <div class="key-sqr" id="x">X</div>
     <div class="key-sqr" id="c">C</div>
