bug fixes for first go

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 <body>
     <h1>Wordle</h1>
     <h2>The Word Guessing Game</h2>
+    <section class="points">
+        <p class="points-display">Current Points: <span class="points-tally"></span></p>
+        <button class="points-button hidden">Reset-Points</button>
+        </section>
     <h3 id="results">Take your first guess</h3>
 <section class="word-board">
     <section class="guess-word" id="Guess-1">
