--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wordle</title>
-    <link rel="stylesheet" href="./style.css">
-    <script type="module" defer src="./data.js"></script>
-    <script type="module" defer src="./app.js"></script>
+    <link rel="stylesheet" href="./styles/style.css">
+    <script type="module" defer src="./scripts/data.js"></script>
+    <script type="module" defer src="./scripts/app.js"></script>
     <title>Wordle</title>
 </head>
 <body>
